--- a/src/app/shorten-url.component.html
+++ b/src/app/shorten-url.component.html
@@ -23,6 +23,6 @@
 
   <!-- Footer -->
   <footer class="absolute bottom-0 w-full p-4 bg-gray-800 text-white text-center">
-    &copy; {{ currentYear }} Your Company Name. All rights reserved.
+    &copy; {{ currentYear }} OLUWAFEMI.O . All rights reserved.
   </footer>
 </div>
